--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
           </div>
         </div>
         <div id="videoContainer"></div>
+        <div id="chatWindow">
+          <input type="text" placeholder="Type" id="txtChat">
+          <div id="chatStatus"></div>
+          <div id="chatHistory"></div>
+        </div>
       </div>
     </div>
   </body>
